--- a/client/client/package.json
+++ b/client/client/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "fetch": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-plaid-link": "^3.5.1"
   },
   "devDependencies": {
